--- a/drupal/sites/all/themes/xeros_theme/sass/components/_dropdown.scss
+++ b/drupal/sites/all/themes/xeros_theme/sass/components/_dropdown.scss
@@ -109,7 +109,7 @@ dl {
    border: 1px solid #ccc;
    border-radius: 0;
    margin-top: -11px;
-   z-index: 100;
+   z-index: 1;
    display:none;
    padding-bottom: 15px;
  }
