--- a/drupal/sites/all/themes/xeros_theme/sass/components/_flipper.scss
+++ b/drupal/sites/all/themes/xeros_theme/sass/components/_flipper.scss
@@ -85,7 +85,7 @@
 
   /* front pane, placed above back */
   .front {
-   z-index: 2;
+   // z-index: 2;
     /* for firefox 31 */
 
     //@include transform(rotateY(0deg));
